--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node src/index.js",
-    "dev": "NODE_ENV=development nodemon src/index.js",
-    "db:migrate": "NODE_ENV=production npx sequelize-cli db:migrate",
-    "db:migrate:dev": "NODE_ENV=development npx sequelize-cli db:migrate",
-    "db:seed:dev": "NODE_ENV=development npx sequelize-cli db:seed:all",
-    "db:migrate:seed:dev": "npm run db:migrate:dev && npm run db:seed:dev"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:seed": "npm run db:migrate:dev && npm run db:seed:dev"
   },
   "keywords": [],
   "author": "",
