--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "db:migrate:seed": "npm run db:migrate:dev && npm run db:seed:dev"
+    "db:seed": "npx sequelize-cli db:seed:all",
+    "db:migrate:seed": "npm run db:migrate && npm run db:seed"
   },
   "keywords": [],
   "author": "",
